--- a/schemas/sequencing-runs-service.yaml
+++ b/schemas/sequencing-runs-service.yaml
@@ -45,6 +45,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SequencingInstrumentIlluminaJSONArray'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: string
     post:
       tags:
         - sequencing-instruments
